--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -12,15 +12,12 @@
 </head>
 <body>
   <%= require('html-loader!../partials/header.html') %>
-<!--   <%= require('html-loader!../partials/nav.html') %> -->
+
 
   <%= require('html-loader!../partials/main.html') %>
 
-  <!-- <h1 class="page-title">
-    <i class="fab fa-fort-awesome"></i>
-    HOMEPAGE
-  </h1> -->
+ 
 
-  <!-- <%= require('html-loader!../partials/footer.html') %> -->
+  <%= require('html-loader!../partials/footer.html') %>
 </body>
 </html>
