--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <%= require('html-loader!../partials/header.html') %>
-
+  <%= require('html-loader!../partials/nav.html') %>
 
   <%= require('html-loader!../partials/main.html') %>
 
