--- a/src/page-index/tmpl.html
+++ b/src/page-index/tmpl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My homepage</title>
+  <title>MoooGle</title>
   <meta charset="UTF-8">
   <meta http-equiv="cache-control" content="no-cache"/>
   <meta http-equiv="pragma" content="no-cache"/>
@@ -16,7 +16,7 @@
 
   <%= require('html-loader!../partials/main.html') %>
 
- 
+
 
   <%= require('html-loader!../partials/footer.html') %>
 </body>
