--- a/src/page-about/tmpl.html
+++ b/src/page-about/tmpl.html
@@ -12,13 +12,9 @@
       integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
       crossorigin="anonymous"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700,700i,900&display=swap"
-      rel="stylesheet"
-    />
   </head>
   <body>
-    
+    <%= require('html-loader!../partials/header.html') %>
     <%= require('html-loader!../partials/about.html') %>
     <%= require('html-loader!../partials/footer.html') %>
   </body>
